# landing_area_detector

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
config/: config_geotech.yaml
data/raster/: LAD_Takuyo_B1_raster_100mm.tif  LAD_Takuyo_B1_raster_40mm.tif  PATTERN_Gray100x100.tif  PATTERN_Gray10x10.tif
data/vector/: LAD_Takuyo_B1_10mm_ConcaveHull.shp  LAD_Takuyo_B1_10mm_Vertices.shp
docs/: Doxyfile  Landing Area Detection.drawio
docs/doxygen/html/: _c_make_c_compiler_id_8c.html  _c_make_c_x_x_compiler_id_8cpp.html  _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  args_8hxx.html  args_8hxx.js  args_8hxx__dep__incl.map  args_8hxx__dep__incl.md5  args_8hxx__incl.map  args_8hxx__incl.md5  args_8hxx_source.html  cgal__test_8cpp.html  cgal__test_8cpp.js  cgal__test_8cpp__incl.map  cgal__test_8cpp__incl.md5  class_geotiff-members.html  class_geotiff.html  class_geotiff.js  classargs_1_1_action_flag-members.html  classargs_1_1_action_flag.html  classargs_1_1_action_flag.js  classargs_1_1_argument_parser-members.html  classargs_1_1_argument_parser.html  classargs_1_1_argument_parser.js  classargs_1_1_base-members.html  classargs_1_1_base.html  classargs_1_1_base.js  classargs_1_1_base__inherit__graph.map  classargs_1_1_base__inherit__graph.md5  classargs_1_1_command-members.html  classargs_1_1_command.html  classargs_1_1_command.js  classargs_1_1_command_1_1_raii_subparser-members.html  classargs_1_1_command_1_1_raii_subparser.html  classargs_1_1_command_1_1_raii_subparser.js  classargs_1_1_counter_flag-members.html  classargs_1_1_counter_flag.html  classargs_1_1_counter_flag.js  classargs_1_1_error-members.html  (+354 more)
docs/doxygen/html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_11.js  classes_2.js  classes_3.js  classes_6.js  classes_9.js  classes_a.js  classes_b.js  classes_d.js  classes_e.js  defines_0.js  defines_3.js  enums_0.js  enums_2.js  enums_3.js  enumvalues_0.js  enumvalues_2.js  enumvalues_4.js  (+48 more)
docs/doxygen/latex/: _c_make_c_compiler_id_8c.tex  _c_make_c_x_x_compiler_id_8cpp.tex  _r_e_a_d_m_e_8md.tex  annotated.tex  args_8hxx.tex  args_8hxx__dep__incl.md5  args_8hxx__incl.md5  cgal__test_8cpp.tex  cgal__test_8cpp__incl.md5  class_geotiff.tex  classargs_1_1_action_flag.tex  classargs_1_1_action_flag__coll__graph.md5  classargs_1_1_action_flag__inherit__graph.md5  classargs_1_1_argument_parser.tex  classargs_1_1_argument_parser__coll__graph.md5  classargs_1_1_argument_parser__inherit__graph.md5  classargs_1_1_base.tex  classargs_1_1_base__inherit__graph.md5  classargs_1_1_command.tex  classargs_1_1_command_1_1_raii_subparser.tex  classargs_1_1_command__coll__graph.md5  classargs_1_1_command__inherit__graph.md5  classargs_1_1_counter_flag.tex  classargs_1_1_counter_flag__coll__graph.md5  classargs_1_1_counter_flag__inherit__graph.md5  classargs_1_1_error.tex  classargs_1_1_error__coll__graph.md5  classargs_1_1_error__inherit__graph.md5  classargs_1_1_extra_error.tex  classargs_1_1_extra_error__coll__graph.md5  classargs_1_1_extra_error__inherit__graph.md5  classargs_1_1_flag.tex  classargs_1_1_flag__coll__graph.md5  classargs_1_1_flag__inherit__graph.md5  classargs_1_1_flag_base.tex  classargs_1_1_flag_base__coll__graph.md5  classargs_1_1_flag_base__inherit__graph.md5  classargs_1_1_global_options.tex  classargs_1_1_global_options__coll__graph.md5  classargs_1_1_global_options__inherit__graph.md5  (+161 more)
include/: geotiff.hpp  headers.h  helper.h  lad_analysis.h  lad_config.hpp  lad_core.hpp  lad_enum.hpp  lad_layer.hpp  lad_processing.hpp  lad_thread.hpp  options.h
scripts/: batch.gdal_retile.sh  batch.geoderivatives.sh  batch.img_resample.sh  batch.landability.sh  batch.rugosity.sh  build_info.txt  collect_maps.sh  tiff.convert2png.sh  tiff.remove.sh
src/: cgal-test.cpp  cgal_test.cpp  config.yaml  gdal_test.cpp  gdal_write_test.cpp  gdatl_test.cpp  geotiff.cpp  helper.cpp  img.resample.cpp  lad_analysis.cpp  lad_config.cpp  lad_core.cpp  lad_layer.cpp  lad_processing.cpp  lad_test.cpp  lad_thread.cpp  land.cpp  mad_test.cpp  main.cpp  tiff2png.cpp  tiff2rugosity.cpp  write_pcd.cpp
